dawn_glfw_dir = "//aquarium/thirdparty/dawn/third_party/glfw"
dawn_jinja2_dir = "//aquarium/thirdparty/dawn/third_party/jinja2"
dawn_googletest_dir = "//aquarium/thirdparty/dawn/third_party/googletest"
dawn_shaderc_dir = "//aquarium/thirdparty/dawn/third_party/shaderc"
dawn_spirv_cross_dir = "//aquarium/thirdparty/dawn/third_party/spirv-cross"
dawn_spirv_tools_dir = "//aquarium/thirdparty/dawn/third_party/SPIRV-Tools"
